# Hydroponic_Closet

./: README.md
src/: CMakeLists.txt  particiones.csv  sdkconfig
src/components/ssd1306/: font8x8_basic.h
src/main/: CMakeLists.txt  main.c  main.cpp
src/main/Protocols/: I2C_protocol.c  I2C_protocol.h
src/main/WaterCurrent/: water_current.c  water_current.h
src/main/actuators/Fan/: Fan.c  Fan.h
src/main/actuators/WaterFlow/: water_flow.c  water_flow.h
src/main/actuators/leds/: leds.c  leds.h
src/main/include/Protocols/: I2C_protocol.c  I2C_protocol.h
src/main/include/actuators/Fan/: Fan.c  Fan.h
src/main/include/actuators/WaterFlow/: water_flow.c  water_flow.h
src/main/include/actuators/leds/: leds.h
src/main/include/blue/: bt_main.c  bt_main.h
src/main/include/contador/: contador.c  contador.h
src/main/include/sensors/Humidity/: humidity.c  humidity.h
src/main/include/sensors/Temperature/: temperature.c  temperature.h
src/main/include/wifi/: wifi_def.c  wifi_def.h
src/main/sensors/Humidity/: humidity.h
src/main/sensors/Temperature/: temperature.c  temperature.h
src/main/thingsboard/: things_board.c  things_board.h
src/main/wifi/: wifi.c  wifi.h
src/main/wifi/AP/: ap.c  ap.h
src/main/wifi/STA/: sta.c  sta.h
